@@ -61,9 +61,10 @@
       </epc:otherwise>
     </epc:choose>
 
-<!-- This field is much more complicated than creators, but hear if you need it.
+<!-- This field is much more complicated than creators, but here if you need it. 
     <component><field ref="contributors" /></component>
 -->
+
 
     <epc:if test="type = 'exhibition'">
       <component collapse="yes"><field ref="exhibitors"/></component>
