@@ -1010,12 +1010,22 @@ Titles and Help for the System Fields
     <epp:phrase id="eprint_fieldhelp_relation">This field describes relationships this item has to other entities. Ideally, use URIs for the target identifier.</epp:phrase>
     <epp:phrase id="eprint_fieldname_relation_uri">Target identifier</epp:phrase>
     <epp:phrase id="eprint_fieldname_relation_type">Relation type</epp:phrase>
-    <epp:phrase id="eprint_fieldname_issues">Issues</epp:phrase>
-    <epp:phrase id="eprint_fieldname_issues_id">Issue ID</epp:phrase>
-    <epp:phrase id="eprint_fieldname_issues_type">Issue type</epp:phrase>
-    <epp:phrase id="eprint_fieldname_issues_description">Description</epp:phrase>
-    <epp:phrase id="eprint_fieldname_issues_first_seen">First seen</epp:phrase>
-    <epp:phrase id="eprint_fieldname_issues_count">Number of issues</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues">Issues</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_id">Issue ID</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_type">Issue type</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_description">Description</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_timestamp">Timestamp</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_status">Status</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_reported_by">Reported by</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_resolved_by">Resolved by</epp:phrase>
+    <epp:phrase id="eprint_fieldname_item_issues_comment">Comments</epp:phrase>
+    <epp:phrase id="eprint_fieldopt_item_issues_status_discovered">Auto Discovered</epp:phrase>
+    <epp:phrase id="eprint_fieldopt_item_issues_status_ignored">Ignored</epp:phrase>
+    <epp:phrase id="eprint_fieldopt_item_issues_status_autoresolved">Auto Resolved</epp:phrase>
+    <epp:phrase id="eprint_fieldopt_item_issues_status_reported">Reported</epp:phrase>
+    <epp:phrase id="eprint_fieldopt_item_issues_status_resolved">Resolved</epp:phrase>
+
+    <epp:phrase id="eprint_fieldname_item_issues_count">Number of issues</epp:phrase>
 
     <epp:phrase id="eprint_fieldname__fulltext_">Full Text</epp:phrase>
     <epp:phrase id="eprint_fieldname_documents">Documents</epp:phrase>
@@ -1322,7 +1332,7 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen/EPrint/Issues:title">Issues</epp:phrase>
     <epp:phrase id="Plugin/Screen/EPrint/Issues:live_audit_intro"><h3>Current Issues</h3><p>The current issues section may not contain all issues discovered in the periodic audit, such as items with similar titles.</p></epp:phrase>
     <epp:phrase id="Plugin/Screen/EPrint/Issues:no_live_issues">No issues found.</epp:phrase>
-    <epp:phrase id="Plugin/Screen/EPrint/Issues:last_audit"><h3>Issues discovered in last audit</h3></epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/Issues:issues"><h3>Issues recorded</h3></epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Staff/IssueSearch:description">Search for issues discovered in current records.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Staff/IssueSearch:title">Issues Search</epp:phrase>
